feat: 添加 ChangeLog 提示

--- a/src/MBA.Core/MBA.Core.csproj
+++ b/src/MBA.Core/MBA.Core.csproj
@@ -9,6 +9,7 @@
     <Content Include="..\..\assets\**" Exclude="..\..\assets\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="..\..\CHANGELOG.md" Visible="false" />
   </ItemGroup>
 
 </Project>
