--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,11 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "json.schemas": [
+        {
+            "fileMatch": ["/assets/Resource/**/*.json"],
+            "url": "/assets/Resource/pipeline.schema.json"
+        }
+    ]
 }
