🐞 fix(简中): 无效任务给个空字符串占位

--- a/assets/Resource/SC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/SC/pipeline/OCRPartialTasks.json
@@ -250,10 +250,14 @@
         ]
     },
     "Click_ScrimmageButton_Partial": {
-        "text": []
+        "text": [
+            ""
+        ]
     },
     "ScrimmageFlag_Partial": {
-        "text": []
+        "text": [
+            ""
+        ]
     },
     "Sub_Goto_Trinity_Partial": {
         "text": [
