--- a/src/MBA.Core/MBA.Core.csproj
+++ b/src/MBA.Core/MBA.Core.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <Content Include="..\..\assets\**" Exclude="..\..\assets\*.*">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="..\..\CHANGELOG.md" Visible="false" />
   </ItemGroup>
