feat: 添加命令行参数 NoPause
fix: 退出按两次

--- a/src/MBA.Cli/Properties/launchSettings.json
+++ b/src/MBA.Cli/Properties/launchSettings.json
@@ -2,6 +2,7 @@
     "profiles": {
         "MBA.Cli": {
             "commandName": "Project",
+            "commandLineArgs": "NoPause",
             "environmentVariables": {
                 "MBA_ENVIRONMENT": "Debug"
             }
