feat: 适配国际服新 UI 及操作逻辑
Breaking Change

--- a/assets/Resource/EN/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/EN/pipeline/OCRPartialTasks.json
@@ -157,7 +157,8 @@
     },
     "Click_TouchButton_Partial": {
         "text": [
-            "TOUCH"
+            "TOUCH",
+            "T O U C H"
         ]
     },
     "Start_SweepMission_Partial": {
