--- a/assets/Resource/SC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/SC/pipeline/OCRPartialTasks.json
@@ -389,6 +389,11 @@
             "工作任务"
         ]
     },
+    "Sub_Click_SignInFlag_Partial": {
+        "text": [
+            "^第.*天$"
+        ]
+    },
     "0": {
         "text": [
             "00"
