--- a/assets/Resource/TC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/TC/pipeline/OCRPartialTasks.json
@@ -443,6 +443,11 @@
             "任務"
         ]
     },
+    "Sub_Click_SignInFlag_Partial": {
+        "text": [
+            "^第.*天$"
+        ]
+    },
     "0": {
         "text": [
             "00"
