--- a/assets/Resource/EN/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/EN/pipeline/OCRPartialTasks.json
@@ -432,6 +432,11 @@
             "Tasks"
         ]
     },
+    "SignInFlag": {
+        "text": [
+            "^Day ?\\d+$"
+        ]
+    },
     "0": {
         "text": [
             "00"
