fix: 修复卡在 Sub_Click_SignIn 的问题

--- a/assets/Resource/EN/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/EN/pipeline/OCRPartialTasks.json
@@ -432,7 +432,7 @@
             "Tasks"
         ]
     },
-    "SignInFlag": {
+    "Sub_SignInFlag_Partial": {
         "text": [
             "^Day ?\\d+$"
         ]
