--- a/assets/Resource/TC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/TC/pipeline/OCRPartialTasks.json
@@ -443,7 +443,7 @@
             "任務"
         ]
     },
-    "Sub_Click_SignInFlag_Partial": {
+    "Sub_SignInFlag_Partial": {
         "text": [
             "^第.*天$"
         ]
