--- a/assets/Resource/SC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/SC/pipeline/OCRPartialTasks.json
@@ -391,7 +391,7 @@
             "工作任务"
         ]
     },
-    "Sub_Click_SignInFlag_Partial": {
+    "Sub_SignInFlag_Partial": {
         "text": [
             "^第.*天$"
         ]
