chore: 更新简中 OCR 字段

--- a/assets/Resource/SC/pipeline/OCRPartialTasks.json
+++ b/assets/Resource/SC/pipeline/OCRPartialTasks.json
@@ -163,7 +163,7 @@
     },
     "Click_StartSweepButton_Partial": {
         "text": [
-            "开始扫荡"
+            "开始快速战斗"
         ]
     },
     "Click_SkipButton_Partial": {
