chore: 更新至 Maa.Framework 1.4.0

--- a/src/MBA.Core/MBA.Core.csproj
+++ b/src/MBA.Core/MBA.Core.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Maa.AgentBinary" />
-    <PackageReference Include="Maa.ToolKit.Extensions" />
+    <PackageReference Include="Maa.Framework" />
   </ItemGroup>
 
   <ItemGroup>
