--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,9 +4,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Maa.AgentBinary" Version="1.0.0" />
-    <PackageVersion Include="Maa.Framework.Runtimes" Version="0.3.7" />
-    <PackageVersion Include="Maa.ToolKit.Extensions" Version="1.0.0-beta.2.1" />
+    <PackageVersion Include="Maa.Framework" Version="1.4.0" />
     <PackageVersion Include="Serilog" Version="3.0.1" />
     <PackageVersion Include="Serilog.Sinks.Debug" Version="2.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="4.1.0" />
